--- a/fp-interface/themes/leggero/leggero/res/common.css
+++ b/fp-interface/themes/leggero/leggero/res/common.css
@@ -203,8 +203,9 @@ h4 { font-size: 1.2em; }
 
 #emoticon { 
 		margin: 0em !IMPORTANT;
-		height: 17px;
-		width: 17px;
+		height: 18px;
+		width: 18px;
+		vertical-align: text-top;
 		}
 
 /* === List === */
